Swap our application back end framework
After some pondering and more work on the UI end, it has been decided
that the best course of action is to re-combine the API and UI portions
into a single project, but using rollup instead of vite so that we
don't have issues with running multiple servers.

This commit is the framework for all of that, and includes some
temporary pages and components just as a proof of concept; these need
to be fleshed out into something more concrete from our other project.

--- a/src/overlays/addon_three.html
+++ b/src/overlays/addon_three.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Addon Part Two</title>
+  <title>Addon Numero Troi</title>
 </head>
 <body>
 
-<h1>This is addon two</h1>
+<h1>This is addon three</h1>
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -17,6 +17,6 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <script src="/socket.io/socket.io.js"></script>
-<script type="module" src="js/addon_two.js"></script>
+<script data-main type="module" src="js/addon_two.js"></script>
 </body>
 </html>
