--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>The Ruinous API</title>
-</head>
-<body>
-Nothing exciting to see here, sorry.
-</body>
+<html lang="en" data-theme="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + Svelte</title>
+  </head>
+  <body>
+    <script type="module" src="/app.js"></script>
+  </body>
 </html>
