--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <title>Ruinous Addons</title>
+    <link href="/fontawesome/css/all.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="/favicon.png">
+    <script type="text/javascript">
+      // If the user specifically said that they wanted dark mode, or there is
+      // no preference but the OS says that the user prefers a dark color scheme,
+      // then turn on dark mode.
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.setAttribute('data-theme', 'dark');
+      }
+    </script>
   </head>
   <body>
     <script type="module" src="/app.js"></script>
