--- a/src/overlays/addon_three.html
+++ b/src/overlays/addon_three.html
@@ -17,6 +17,6 @@ cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 <script src="/socket.io/socket.io.js"></script>
-<script data-main type="module" src="js/addon_two.js"></script>
+<script data-main type="module" src="js/addon_three.js"></script>
 </body>
 </html>
