--- a/src/overlays/addon_three.html
+++ b/src/overlays/addon_three.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="addon_three.css">
   <title>Addon Numero Troi</title>
 </head>
 <body>
