Make Lighthouse happy w/r/t SEO
This is a simple one, but apparently if you tell a web crawler that it
can crawl your web, it buys you cake and takes you out to dinner and
maybe a movie, but if you don't, various web tools take a dump on your
head?

The life of a web developer is hard indeed.

In any case, this includes a robots.txt file as well as a top level
metatag with a site description, so that in case the site ever
accidentally gets crawled, google will know what to do.

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <title>Ruinous Addons</title>
     <link href="/fontawesome/css/all.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="/favicon.png">
+    <meta name="description" content="A collection of freely available addons for Twitch Streamers to augment their streams.">
     <script type="text/javascript">
       // If the user specifically said that they wanted dark mode, or there is
       // no preference but the OS says that the user prefers a dark color scheme,
